fix: reverting previous fix, adding overflow hidden to body class

--- a/elements/pf-accordion/BaseAccordionPanel.css
+++ b/elements/pf-accordion/BaseAccordionPanel.css
@@ -18,6 +18,11 @@
   overflow-y: auto;
 }
 
+.body {
+  position: relative;
+  overflow: hidden;
+}
+
 .body:after {
   content: "";
   position: absolute;
